#cargo-features = ["strip"]

[package]
name = "honor"
version = "0.1.0"
authors = ["Iron Oxidizer"]
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
#strip = "symbols"

[dependencies]
anyhow = { version = "1.0.37", default-features = false }
app_dirs = { version = "1.2.1", default-features = false }
serde = { version = "1.0.118", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.61", default-features = false }
base64 = { version = "0.13.0", default-features = false }
itertools = { version = "0.10.0", default-features = false }

futures = { version = "0.3.9", default-features = false, features = ["std"] }
tokio = { version = "0.2.24", default-features = false, features = ["rt-threaded", "net", "macros"] }
tokio-native-tls = { version = "0.1.0", default-features = false }
tokio-tungstenite = { version = "0.11.0", default-features = false, features = ["connect", "tls"] }
reqwest = { version = "0.10.10", default-features = false, features = ["native-tls", "json"] }

druid = { git = "git://github.com/linebender/druid.git", default-features = false, features = ["im", "serde"] }